cmake_minimum_required(VERSION 3.0)
project(Design_Pattern_CPP)

find_package(Boost 1.68.0 COMPONENTS filesystem REQUIRED)
#find_package(Boost 1.68.0 COMPONENTS thread REQUIRED)

if(Boost_FOUND)
    set(CMAKE_C_STANDARD 99)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)

    enable_testing()

    add_subdirectory(googletest)
    add_subdirectory(Singleton)
    add_subdirectory(Mapleton)
    add_subdirectory(DependencyInjection)
    add_subdirectory(BuildPattern)
    add_subdirectory(Proto)
    add_subdirectory(ObjectPool)
    add_subdirectory(RAII)
    add_subdirectory(Decorator)
    add_subdirectory(Adaptor)
    add_subdirectory(Bridge)
    add_subdirectory(Composite)
    add_subdirectory(Delegation)
    add_subdirectory(Facade)
    add_subdirectory(Flyweight)
    add_subdirectory(Proxy)
    add_subdirectory(ChainOfRes)
    add_subdirectory(CommandPattern)
    add_subdirectory(Interpreter)
    add_subdirectory(IteratorPattern)
    add_subdirectory(Visitor)
    add_subdirectory(Observer)
endif()